--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
     "name": "express-gql-server",
     "private": true,
+    "scripts": {
+        "test": "nodemon server.js",
+        "start": "node server.js "
+    },
     "dependencies": {
-        "apollo-server-express": "^1.4.0",
-        "body-parser": "^1.19.0",
-        "cors": "^2.8.5",
         "express": "^4.17.1",
-        "graphql-tools": "^8.2.0"
+        "express-graphql": "^0.12.0",
+        "graphql": "^15.8.0",
+        "nodemon": "^2.0.15"
     }
 }
